--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "User-friendly and compact C++ Web Framework",
   "scripts": {
-    "build": "cmake . . && cmake --build .",
-    "install": "make install",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "cmake -DTESTING=ON -S . -B build/ && cmake --build build",
+    "test": "ctest --test-dir build",
+    "dev:build": "cmake -S . -B build/ && cmake --build build",
+    "dev:run": "cmake -S . -B build/ && cmake --build build && ./build/vibex"
   },
   "repository": {
     "type": "git",
